Attempt to fix background jumping

--- a/front/public/style.css
+++ b/front/public/style.css
@@ -5,4 +5,5 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-blend-mode: darken;
+  height: 100vh;
 }
